base do html e criação das imagens

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="ptbr">
-<head>
-    <meta charset="UTF-8">
-    <title>Game Mania</title>
-</head>
-<body>
-    
-</body>
-</html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="CSS/style.css">
+        <title>Game Mania</title>
+    </head>
+    <body>
+        <header>
+            <section>
+                <span>Logo</span>
+                <nav>
+                    <a>Inicio</a>
+                    <a>Horários</a>
+                    <a>Campeonatos</a>
+                    <a>Resultados</a>
+                    <a>Notícias</a>
+                </nav>
+            </section>
+        </header>
+        
+    </body>
+    </html>
