organização basica do header

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -2,21 +2,29 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" href="images/icon.png">
+        <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/style.css">
         <title>Game Mania</title>
     </head>
     <body>
         <header>
-            <section>
-                <span>Logo</span>
+            <div class="header-site">
+                <h1><img src="images/logo.png" alt="Logo da game mania"></h1>
                 <nav>
-                    <a>Inicio</a>
-                    <a>Horários</a>
-                    <a>Campeonatos</a>
-                    <a>Resultados</a>
-                    <a>Notícias</a>
+                    <a>Carrinho de compras</a>
+                    <a>Icon login</a>
+                    <a>Login/Cadastre-se</a>
                 </nav>
-            </section>
+            </div>
+            <div class="menu-navegação">
+                <nav>
+                    <a>Todos os produtos</a>
+                    <a>Computadores Montados</a>
+                    <a>Monte seu computador</a>
+                </nav>
+                <input class="barra-de-pesquisa" type="search" id="barra-de-pesquisa" placeholder="oque procura?"> 
+            </div>
         </header>
         
     </body>
