atualização do css

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-site">
                 <h1><img src="images/logo.png" alt="Logo da game mania"></h1>
-                <nav>
+                <nav class="nav-login">
                     <a>Carrinho de compras</a>
                     <a>Icon login</a>
                     <a>Login/Cadastre-se</a>
