refatoração do header

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -25,6 +25,9 @@
                 <input class="barra-de-pesquisa" type="search" id="barra-de-pesquisa" placeholder="oque procura?"> 
             </div>
         </header>
+        <main>
+            <h2><img class="banner-promocao" src="images/banner.png" alt="banner de promoção"></h2>
+        </main>
         
     </body>
     </html>
