produtos do main

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -27,7 +27,34 @@
         </header>
         <main>
             <h2><img class="banner-promocao" src="images/banner.png" alt="banner de promoção"></h2>
+            <div class="produtos">
+                <div class="produtos-computadores">
+                    <ul>
+                        <li>
+                            <img src="images/pc1.png" alt="computador 1">
+                        </li>
+                        <li>
+                            <img src="images/pc2.png" alt="computador 2">
+                        </li>
+                        <li>
+                            <img src="images/pc3.png" alt="computador 3">
+                        </li>
+                    </ul>
+                </div>
+                <div class="produtos-perifericos">
+                    <ul>
+                        <li>
+                            <img src="images/teclado.png" alt="teclado">
+                        </li>
+                        <li>
+                            <img src="images/mouse.png" alt="mouse">
+                        </li>
+                        <li>
+                            <img src="images/fone.png" alt="fone">
+                        </li>
+                    </ul>
+                </div>
         </main>
         
     </body>
-    </html>
+</html>
