--- a/UC9/index.html
+++ b/UC9/index.html
@@ -55,6 +55,14 @@
                     </ul>
                 </div>
         </main>
+        <footer>
+            <span class="barra"></span>
+            <div class="info-footer">
+                <h3>sobre a game mania</h3>
+                <h4>nossas lojas</h4>
+
+            </div>
+        </footer>
         
     </body>
 </html>
