atualização dos pngs e pequenas refatorações

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -27,8 +27,8 @@
         </header>
         <main>
             <h2><img class="banner-promocao" src="images/banner.png" alt="banner de promoção"></h2>
-            <div class="produtos">
-                <div class="produtos-computadores">
+            <div>
+                <div class="produtos">
                     <ul>
                         <li>
                             <img src="images/pc1.png" alt="computador 1">
@@ -41,7 +41,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="produtos-perifericos">
+                <div class="produtos">
                     <ul>
                         <li>
                             <img src="images/teclado.png" alt="teclado">
@@ -58,9 +58,18 @@
         <footer>
             <span class="barra"></span>
             <div class="info-footer">
+                <section class="informações">
                 <h3>sobre a game mania</h3>
                 <h4>nossas lojas</h4>
-
+                <p>Lorem ipsum dolor sit amet. Et quia quia est dolores quam nam internos nulla 
+                    sed inventore neque velmolestiae sunt aut aliquam culpa? Est eligendi unde ea 
+                    dolorum quia qui iusto cumque.</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Lorem ipsum dolor sit amet</li>
+                </ul>
+                </section>
             </div>
         </footer>
         
