botao do carrinho de compras e login

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -12,8 +12,8 @@
                 <h1><img src="images/logo.png" alt="Logo da game mania"></h1>
                 <nav class="nav-login">
                     <a>Carrinho de compras</a>
-                    <a>Icon login</a>
-                    <a>Login/Cadastre-se</a>
+                    <a><img src="images/iconLogin.png"></a>
+                    <a id="login">Login/Cadastre-se</a>
                 </nav>
             </div>
             <div class="menu-navegação">
@@ -32,12 +32,15 @@
                     <ul>
                         <li>
                             <img src="images/pc1.png" alt="computador 1">
+                            <p>adicionar ao carrinho</p>
                         </li>
                         <li>
                             <img src="images/pc2.png" alt="computador 2">
+                            <p>adicionar ao carrinho</p>
                         </li>
                         <li>
                             <img src="images/pc3.png" alt="computador 3">
+                            <p>adicionar ao carrinho</p>
                         </li>
                     </ul>
                 </div>
@@ -45,12 +48,15 @@
                     <ul>
                         <li>
                             <img src="images/teclado.png" alt="teclado">
+                            <p>adicionar ao carrinho</p>
                         </li>
                         <li>
                             <img src="images/mouse.png" alt="mouse">
+                            <p>adicionar ao carrinho</p>
                         </li>
                         <li>
                             <img src="images/fone.png" alt="fone">
+                            <p>adicionar ao carrinho</p>
                         </li>
                     </ul>
                 </div>
