imagem do carrinho de compras

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -11,7 +11,7 @@
             <div class="header-site">
                 <h1><img src="images/logo.png" alt="Logo da game mania"></h1>
                 <nav class="nav-login">
-                    <a>Carrinho de compras</a>
+                    <a><img id="carrinhoDeCompras" src="images/carrinho de compras.png"></a>
                     <a><img src="images/iconLogin.png"></a>
                     <a id="login">Login/Cadastre-se</a>
                 </nav>
@@ -70,6 +70,7 @@
                 <p>Lorem ipsum dolor sit amet. Et quia quia est dolores quam nam internos nulla 
                     sed inventore neque velmolestiae sunt aut aliquam culpa? Est eligendi unde ea 
                     dolorum quia qui iusto cumque.</p>
+                <span class="barra-branca"></span>
                 <ul>
                     <li>Lorem ipsum dolor sit amet</li>
                     <li>Lorem ipsum dolor sit amet</li>
