criação da pagina de testes para navegação no site

--- a/UC9/index.html
+++ b/UC9/index.html
@@ -11,16 +11,16 @@
             <div class="header-site">
                 <h1><img src="images/logo.png" alt="Logo da game mania"></h1>
                 <nav class="nav-login">
-                    <a><img id="carrinhoDeCompras" src="images/carrinho de compras.png"></a>
-                    <a><img src="images/iconLogin.png"></a>
-                    <a id="login">Login/Cadastre-se</a>
+                    <a href="pages/teste.html"><img id="carrinhoDeCompras" src="images/carrinho de compras.png"></a>
+                    <a href="pages/teste.html"><img src="images/iconLogin.png"></a>
+                    <a id="login" href="pages/teste.html">Login/Cadastre-se</a>
                 </nav>
             </div>
             <div class="menu-navegação">
                 <nav>
-                    <a>Todos os produtos</a>
-                    <a>Computadores Montados</a>
-                    <a>Monte seu computador</a>
+                    <a href="pages/teste.html">Todos os produtos</a>
+                    <a href="pages/teste.html">Computadores Montados</a>
+                    <a href="pages/teste.html">Monte seu computador</a>
                 </nav>
                 <input class="barra-de-pesquisa" type="search" id="barra-de-pesquisa" placeholder="oque procura?"> 
             </div>
